scribble/scribble-assertions/src/test/resources/good/extensions/annotations/ChoiceWithAnnot2.scr
module good.extensions.annotations.ChoiceWithAnnot2;


type <java> "java.lang.integer" from "rt.jar" as int;


// assrt-core version of good.extensions.annotations.ChoiceWithAnnot
global protocol Proto1(role A, role B, role C)
{
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z1:int) from B to C;
		ADD(z2:int) from B to C; @"(z2 = z1)"
		 
	} or {
		RES(y:int) from A to B;
		RES(z3:int) from B to C; 
		RES(z4:int) from B to C; @"(z4 = z3)"
	}			
}
