scribble/scribble-assertions/src/test/resources/bad/extensions/annotations/Choice2.scr
module bad.extensions.annotations.Choice2;


type <java> "java.lang.integer" from "rt.jar" as int;


// assrt-core version of bad.extensions.annotations.Choice
global protocol Proto1(role A, role B, role C)
{
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;  
		RES(y1:int) from B to C;  @"(y1 = y)"
	} or {
		RES(y:int) from A to B;
		RES(z1:int) from B to C;
		RES(y2:int) from B to C;  @"(y2 = y)"
	}
}